- Refactored `loadUserByUsername` method to simplify UserDetails creation. - Optimized raw location points fetching and transformation logic in `LocationDataApiController`. - Changed `OwntracksLocationRequest` battery fields types for better accuracy. - Removed redundant authentication checks in token filters for performance improvement. - Updated `SecurityConfig` to include `UrlTokenAuthenticationFilter`. - Adjusted map path visual styles in `index.html`. - Removed unused `locationPoints` field from `User` model. - Minor CSS variable color adjustment for consistency.